--- a/org.apache.tomcat/.classpath
+++ b/org.apache.tomcat/.classpath
@@ -15,6 +15,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/el-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jasper-el.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jasper.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaspic-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tomcat-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tomcat-coyote.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tomcat-dbcp.jar"/>
@@ -23,7 +24,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/tomcat-i18n-ja.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tomcat-jdbc.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tomcat-util.jar" sourcepath="T:/apache-tomcat-7.0.52-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/ecj-4.4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ecj-4.5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tomcat-juli.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
