--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.7</maven.compiler.source>
 	    <maven.compiler.target>1.7</maven.compiler.target>
-		<servoy-repo.url>file:/${project.basedir}/../../servoy-osgi-target/eclipse_target/compile_target/install/</servoy-repo.url>
-		<servoy-shiplibs.url>file:/${project.basedir}/../../servoy-osgi-target/eclipse_target/ship_plugins/</servoy-shiplibs.url>
+		<servoy-repo.url>http://developer.servoy.com/p2_repository/compile_target/install/</servoy-repo.url>
+		<servoy-shiplibs.url>http://developer.servoy.com/p2_repository/ship_plugins/</servoy-shiplibs.url>
 	</properties>
 
 	<repositories>
@@ -93,11 +93,6 @@
 		    <groupId>org.apache.maven.plugins</groupId>
 		    <artifactId>maven-jarsigner-plugin</artifactId>
 		    <version>1.4</version>
-		    <configuration>
-		     <keystore>${project.basedir}/../../build/eclipse_build/keystore</keystore>
-		     <alias>ServoyClient</alias>
-		     <tsa>http://sha256timestamp.ws.symantec.com/sha256/timestamp</tsa>
-		    </configuration>
 		    <executions>
 		     <execution>
 		      <id>sign</id>
