--- a/org.apache.tomcat/.classpath
+++ b/org.apache.tomcat/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="patch"/>
 	<classpathentry exported="true" kind="lib" path="lib/annotations-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/catalina-ant.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/catalina-ha.jar"/>
