--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>eclipse.tomcat</artifactId>
@@ -11,9 +12,9 @@
 		<tycho.extra.version>1.3.0</tycho.extra.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
-	    <maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<servoy-repo.url>http://download.eclipse.org/eclipse/updates/4.10/</servoy-repo.url>
-		<servoy-shiplibs.url>http://developer.servoy.com/p2_repository/ship_plugins84/</servoy-shiplibs.url>
+		<servoy-shiplibs.url>http://developer.servoy.com/p2_repository/ship_plugins/2019.03/</servoy-shiplibs.url>
 	</properties>
 
 	<repositories>
@@ -66,46 +67,46 @@
 					</dependency-resolution>
 				</configuration>
 			</plugin>
-		    <plugin>
-		      <groupId>org.eclipse.tycho.extras</groupId>
-		      <artifactId>tycho-pack200a-plugin</artifactId>
-		      <version>${tycho.extra.version}</version>
-		      <executions>
-		       <execution>
-		        <id>pack200-normalize</id>
-		        <goals>
-		         <goal>normalize</goal>
-		        </goals>
-		       </execution>
-		      </executions>
-		     </plugin>
-		    <plugin>
-		    <groupId>org.apache.maven.plugins</groupId>
-		    <artifactId>maven-jarsigner-plugin</artifactId>
-		    <version>1.4</version>
-		    <executions>
-		     <execution>
-		      <id>sign</id>
-		      <goals>
-		       <goal>sign</goal>
-		      </goals>
-		     </execution>
-		    </executions>
-		   </plugin>
-		   <plugin>
-		      <groupId>org.eclipse.tycho.extras</groupId>
-		      <artifactId>tycho-pack200b-plugin</artifactId>
-		      <version>${tycho.extra.version}</version>
-		      <executions>
-		       <execution>
-		        <id>pack200-pack</id>
-		        <goals>
-		         <goal>pack</goal>
-		        </goals>
-		       </execution>
-		      </executions>
-		     </plugin>
-		     <plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-pack200a-plugin</artifactId>
+				<version>${tycho.extra.version}</version>
+				<executions>
+					<execution>
+						<id>pack200-normalize</id>
+						<goals>
+							<goal>normalize</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jarsigner-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>sign</id>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-pack200b-plugin</artifactId>
+				<version>${tycho.extra.version}</version>
+				<executions>
+					<execution>
+						<id>pack200-pack</id>
+						<goals>
+							<goal>pack</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-plugin</artifactId>
 				<version>${tycho.version}</version>
