--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,19 @@
 	<version>8.1.2.3030</version>
 
 	<properties>
-		<tycho.version>1.3.0</tycho.version>
-		<tycho.extra.version>1.3.0</tycho.extra.version>
+		<tycho.version>1.4.0</tycho.version>
+		<tycho.extra.version>1.4.0</tycho.extra.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<servoy-repo.url>http://download.eclipse.org/eclipse/updates/4.10/</servoy-repo.url>
-		<servoy-shiplibs.url>http://developer.servoy.com/p2_repository/ship_plugins/2019.03/</servoy-shiplibs.url>
+		<eclipse.url>http://download.eclipse.org/eclipse/updates/4.11/</eclipse.url>
+		<servoy-shiplibs.url>http://developer.servoy.com/p2_repository/ship_plugins/2019.06/</servoy-shiplibs.url>
 	</properties>
 
 	<repositories>
 		<repository>
 			<id>servoy</id>
-			<url>${servoy-repo.url}</url>
+			<url>${eclipse.url}</url>
 			<layout>p2</layout>
 		</repository>
 		<repository>
