--- a/org.apache.tomcat/.classpath
+++ b/org.apache.tomcat/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/catalina-storeconfig.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tomcat-jni.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tomcat-util-scan.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/tomcat-websocket.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tomcat-websocket.jar" sourcepath="C:/Users/jcomp/.m2/repository/org/apache/tomcat/tomcat-websocket/8.5.9/tomcat-websocket-8.5.9-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
