--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
 	<packaging>pom</packaging>
 	<version>8.1.2.3030</version>
 
+	<prerequisites>
+		<maven>3.6.0</maven>
+	</prerequisites>	
+	
 	<properties>
 		<tycho.version>1.4.0</tycho.version>
 		<tycho.extra.version>1.4.0</tycho.extra.version>
@@ -37,6 +41,14 @@
 				<artifactId>tycho-maven-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-compiler-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<useJDK>BREE</useJDK>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
