SVY-15177 Show error when starting Servoy developer and port 8080 is taken by an other proces
added a new extension point "tomcat started listener" so that others can
react when the tomcat is fully started.

--- a/org.apache.tomcat/plugin.xml
+++ b/org.apache.tomcat/plugin.xml
@@ -2,5 +2,5 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension-point id="serviceprovider" name="Servlet Filter Websocket provider" schema="schema/serviceprovider.exsd"/>
-
+   <extension-point id="tomcatstartedlistener" name="Tomcat started listener" schema="schema/tomcatstartedlistener.exsd"/>
 </plugin>
