--- a/org.apache.tomcat/.classpath
+++ b/org.apache.tomcat/.classpath
@@ -16,7 +16,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/catalina-ant.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/catalina-ha.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/catalina-tribes.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/catalina.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/catalina.jar" sourcepath="libsrc/apache-tomcat-8.5.64-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/el-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jasper-el.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jasper.jar"/>
