--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<eclipse.url>http://download.eclipse.org/eclipse/updates/4.14/</eclipse.url>
-		<servoy-shiplibs.url>http://developer.servoy.com/p2_repository/ship_plugins/2019.12/</servoy-shiplibs.url>
+		<eclipse.url>https://download.eclipse.org/eclipse/updates/4.14/</eclipse.url>
+		<servoy-shiplibs.url>https://developer.servoy.com/p2_repository/ship_plugins/2019.12/</servoy-shiplibs.url>
 	</properties>
 
 	<repositories>
