--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>eclipse.tomcat</artifactId>
 	<groupId>com.servoy</groupId>
 	<packaging>pom</packaging>
-	<version>9.0.69</version>
+	<version>9.0.83</version>
 
 	<prerequisites>
 		<maven>3.9.3</maven>
@@ -16,7 +16,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<servoy.version>2023.9.0.3902</servoy.version>
+		<servoy.version>2024.3.0.3940_rc</servoy.version>
 	</properties>
 
 	<build>
