--- a/org.apache.tomcat/.classpath
+++ b/org.apache.tomcat/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="lib/annotations-api.jar"/>
 	<classpathentry kind="lib" path="lib/catalina.jar" sourcepath="libsrc/apache-tomcat-9.0.91-src.zip"/>
@@ -10,7 +10,6 @@
 	<classpathentry kind="lib" path="lib/catalina-ssi.jar"/>
 	<classpathentry kind="lib" path="lib/catalina-storeconfig.jar"/>
 	<classpathentry kind="lib" path="lib/catalina-tribes.jar"/>
-	<classpathentry kind="lib" path="lib/ecj-4.20.jar"/>
 	<classpathentry kind="lib" path="lib/jasper.jar"/>
 	<classpathentry kind="lib" path="lib/jasper-el.jar"/>
 	<classpathentry kind="lib" path="lib/jaspic-api.jar"/>
@@ -32,5 +31,8 @@
 	<classpathentry kind="lib" path="lib/tomcat-util.jar"/>
 	<classpathentry kind="lib" path="lib/tomcat-util-scan.jar" sourcepath="libsrc/apache-tomcat-9.0.91-src.zip"/>
 	<classpathentry kind="lib" path="lib/tomcat-websocket.jar"/>
+	<classpathentry kind="lib" path="lib/ecj-4.35.jar"/>
+	<classpathentry kind="lib" path="lib/jakartaee-migration-1.0.9-shaded.jar"/>
+	<classpathentry kind="lib" path="lib/tomcat-coyote-ffm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
