--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
-		<servoy.version>2025.9.0.4100_rc</servoy.version>
+		<servoy.version>2025.9.0.4101_rc2</servoy.version>
 	</properties>
 
 	<build>
