--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<servoy.version>2024.3.2.3945</servoy.version>
+		<servoy.version>2024.3.7.3950_LTS</servoy.version>
 	</properties>
 
 	<build>
